Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95212

Error when empty scene is loaded

XMLWordPrintable

    • Windows
    • 4e9dc4db7f86a040352ed1b4397fdc1541f578b1 (qt/qtquick3d/dev) 0b1ee37de2e77b8aced835afdd35b3873f3adea6 (qt/qtquick3d/6.2) eb4f75cef4a7049ae78b82066e7d1aac35ad644d (qt/qtquick3d/6.1)

      If an empty scene is loaded the application shows an error.
      To reproduce build the project with MSVC2019

        1. error.png
          error.png
          8 kB
        2. stack.txt
          2 kB
        3. shadow_error.7z
          1.52 MB
        For Gerrit Dashboard: QTBUG-95212
        # Subject Branch Project Status CR V

            qt.team.graphics.and.multimedia Qt Graphics Team
            alexey89 alexey89
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes