Fix empty scene crash

When the scene is empty the scene bounds are non-finite causing an
assertion failure when creating the shadow map. Fixed by adding a
isFinite check.

Fixes: QTBUG-95212
Change-Id: I18667dbcb256a6e1dd6209e981d36e5c3177fc20
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 4e9dc4db7f86a040352ed1b4397fdc1541f578b1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>